no longer making the dashboard smaller upon mobile resizing

--- a/ClientApp/src/components/DashBoard/DashBoard.css
+++ b/ClientApp/src/components/DashBoard/DashBoard.css
@@ -6,8 +6,5 @@
 }
 
 @media (max-width: 800px) {
-    .div_dashboard {
-        width: 95%;
-        margin: auto;
-    }
+
 }
